# BLSQ_workshop_DS

./: README.md  environment_workshop.yaml  environment_workshop.yml  pyproject.toml  requirements.txt  week_2.py
bdi_ir/: pipeline.py  workspace.yaml
get_next_campaign_gp/: config.json  pipeline.py
get_next_campaign_jp/: params.json  pipeline.py
get_next_campaign_tog/: params.json  pipeline.py
