[project]
name = "blsq_workshop_ds"
version = "0.1.0"
description = "Workshop collaboration repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
preview = true
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "N", # pep8-naming
    "DOC", # pydoclint
    "PLC", # pylint convention
    "PLE", # pylint error
    "PLW", # pylint warning
    "RUF", # ruff specific rules
]

ignore = [
    "DOC501", # Raised exception {id} missing from docstring	
    "DOC502", # Raised exception is not explicitly raised: {id}	
    "RUF022", # `__all__` is not sorted
    "RUF005", # Consider expression instead of concatenation
    "E501",]



[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true
